change flow config repo to activity config repo